div element and style id

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+#cat-photo-form {
+  background-color: #90ee90;
+}
+
 .red-text {
   color: red;
 }
@@ -20,4 +24,8 @@ p {
   border-width: 10px;
   border-style: solid;
   border-radius: 50%;
+}
+
+.silver-background {
+  background-color: #c0c0c0;
 }
